advgetopt (2.0.41.0~bionic) bionic; urgency=high

  * Added the validator_length validator.
  * Added support for option keys (ARRAY flag).

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 15 Jul 2022 09:02:06 -0700

advgetopt (2.0.40.0~bionic) bionic; urgency=high

  * Removed the debugs. The g_validator_factories was the culprit.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 14 Jul 2022 21:17:18 -0700

advgetopt (2.0.39.3~bionic) bionic; urgency=high

  * Changed the g_validator_factories in a pointer so we allocate before using.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 14 Jul 2022 20:20:45 -0700

advgetopt (2.0.39.2~bionic) bionic; urgency=high

  * Try running the software with gdb to see if we can get some info about
    the crash. If it happens before main()...

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 14 Jul 2022 15:06:44 -0700

advgetopt (2.0.39.1~bionic) bionic; urgency=high

  * Added debug code inline since I don't see the signal handler message.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 14 Jul 2022 11:52:04 -0700

advgetopt (2.0.39.0~bionic) bionic; urgency=high

  * Use a signal handler to capture crashes and print stack in atomic-names.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 13 Jul 2022 21:57:28 -0700

advgetopt (2.0.38.1~bionic) bionic; urgency=high

  * Applied fix to a static_cast so it compiles in release.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 11 Jul 2022 10:02:59 -0700

advgetopt (2.0.38.0~bionic) bionic; urgency=high

  * Fixed two bugs in the environment variable check function.
  * Properly define f_variables in all cases.
  * When parsing environment variable, distinguish between empty and undefined.
  * Allow for flags (i.e. "--verbose") to accept "true" and "false".
  * Added '=', '.', and '/' to the list of characters not requiring escaping.
  * Added coverage tests for new code (validators, variables, etc.)
  * Applied some fixes to the variables implementation so errors work.